--- a/ProyectoAzureAMH/ProyectoAzureAMH.csproj
+++ b/ProyectoAzureAMH/ProyectoAzureAMH.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NugetUtopiaAMH" Version="1.0.0" />
+    <PackageReference Include="NugetUtopiaAMH" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
