--- a/ProyectoAzureAMH/appsettings.json
+++ b/ProyectoAzureAMH/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiUrls": {
+    "ApiUtopia": "https://apiutopiaamh2022.azurewebsites.net"
+  }
 }
